Fixing an issue with the additional spacing at the bottom of each tag by adding vertical alignment to the ee-tag class

--- a/resources/sass/entryEase.scss
+++ b/resources/sass/entryEase.scss
@@ -118,7 +118,8 @@
             line-height: 0.75em;
             border-radius: 10px;
             font-weight: bold;
-            margin-left: 8px;
+            margin-left: 4x;
+            margin-right: 4px;
         }
         .ee-tag:hover {
             opacity: 0.75;
@@ -127,6 +128,7 @@
             display: inline-block;
             width: auto;
             .material-icons {
+                vertical-align: top;
                 color: #fff;
                 background: var(--bs-secondary);
                 border-radius: 0 10px 10px 0;
